kubernetes/configs/prod/ns.yaml
#
# Copyright 2018 Orkus, Inc
# All Rights Reserved.
#
# @author: Denys Nahurnyi.
# @email:  dnahurnyi@gmail.com
# ---------------------------------------------------------------------------
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
