kubernetes/configs/prod/deployment-gremlinserver.yaml
apiVersion: apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: gremlinserver-deployment
  namespace: nginx-ingress
  labels:
    app: gremlinserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gremlinserver
  template:
    metadata:
      labels:
        app: gremlinserver
    spec:
      containers:
      - name: gremlinserver
        image: {REPO_URI}/gremlinserver:{VERSION}
        ports:
        - containerPort: 8182
          name: ws-port
