kubernetes/configs/prod/deployment-nginx-server.yaml
apiVersion: extensions/v1beta1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx-server-deployment 
  namespace: nginx-ingress
  labels:
    app: nginx-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-server
  template:
    metadata:
      labels:
        app: nginx-server
    spec:
      #      nodeSelector:
      #  nginx: ready
      containers:
      - name: nginx-server
        image: {REPO_URI}/nginx-server:{VERSION}
        ports:
        - containerPort: 80
          name: http-port
        imagePullPolicy: Always
