kubernetes/configs/prod/svc-nginx-ingress.yaml
#
# Copyright 2018 Orkus, Inc
# All Rights Reserved.
#
# @author: Denys Nahurnyi.
# @email:  dnahurnyi@gmail.com
# ---------------------------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "3600"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-west-2:134947659628:certificate/e5b28c34-b0ef-4d9f-b72d-d9987eb0b1ba
    #    Unfortunately, we cant use ACM certs from another account:(https://forums.aws.amazon.com/thread.jspa?threadID=231116)
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 80
    name: https
  selector:
    app: nginx-ingress
