kubernetes/configs/prod/svc-nginx-server.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-server
  name: nginx-server-service
  namespace: nginx-ingress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: {NODEHTTPPORT}
    name: http-port
  selector:
    app: nginx-server
  type: NodePort
status:
  loadBalancer: {}
