kubernetes/configs/prod/ingress-nginx-ingress.yaml
#
# Copyright 2018 Orkus, Inc
# All Rights Reserved.
#
# @author: Denys Nahurnyi.
# @email:  dnahurnyi@gmail.com
# ---------------------------------------------------------------------------
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
  annotations:
    #    nginx.org/grpc-services: "policyreader-service"
    kubernetes.io/ingress.class: "nginx"
    #enable-cors is not supported (https://github.com/nginxinc/kubernetes-ingress/issues/121)
    nginx.org/location-snippets: "include /etc/nginx/custom-snippets/cors.conf;"
    nginx.org/server-snippets: |
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
    nginx.org/server-tokens: "False"

spec:
  #  tls:
  #  - hosts:
  #    - demo.orkus.io 
  #    secretName: default-server-secret

  rules:
  - host: {ORKUS_HOST}
    http:
      paths:
      - path: /v1/policy-reader/
        backend:
          serviceName: policyreader-service
          servicePort: 8081
      - path: /v1/graph-querymgr/
        backend:
          serviceName: graphquerymgr-service
          servicePort: 8089
      - path: /v1/intents/
        backend:
          serviceName: intentmgr-service
          servicePort: 8095
      - path: /v1/tenants
        backend:
          serviceName: tenantmgr-service
          servicePort: 8093
      - path: /v1/calendar
        backend:
          serviceName: calendar-service
          servicePort: 8087
      - path: /v1/changes
        backend:
          serviceName: changemgr-service
          servicePort: 8101
      - path: /v1/usage
        backend:
          serviceName: usagemanager-service 
          servicePort: 8105
      - path: /
        backend:
          serviceName: nginx-server-service
          servicePort: 80
